seaqt/QtNetwork/gen_qnetworkproxy.h

class QNetworkProxy;
class QNetworkProxyFactory;
class QNetworkProxyQuery;
typedef struct QNetworkProxy QNetworkProxy;
typedef struct QNetworkProxyFactory QNetworkProxyFactory;
typedef struct QNetworkProxyQuery QNetworkProxyQuery;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
QNetworkProxyQuery* QNetworkProxyQuery_new();
QNetworkProxyQuery* QNetworkProxyQuery_new2(QUrl* requestUrl);
QNetworkProxyQuery* QNetworkProxyQuery_new3(struct miqt_string hostname, int port);
QNetworkProxyQuery* QNetworkProxyQuery_new4(uint16_t bindPort);
QNetworkProxyQuery* QNetworkProxyQuery_new5(QNetworkProxyQuery* other);
QNetworkProxyQuery* QNetworkProxyQuery_new6(QUrl* requestUrl, int queryType);
QNetworkProxyQuery* QNetworkProxyQuery_new7(struct miqt_string hostname, int port, struct miqt_string protocolTag);
QNetworkProxyQuery* QNetworkProxyQuery_new8(struct miqt_string hostname, int port, struct miqt_string protocolTag, int queryType);
QNetworkProxyQuery* QNetworkProxyQuery_new9(uint16_t bindPort, struct miqt_string protocolTag);
QNetworkProxyQuery* QNetworkProxyQuery_new10(uint16_t bindPort, struct miqt_string protocolTag, int queryType);
void QNetworkProxyQuery_operatorAssign(QNetworkProxyQuery* self, QNetworkProxyQuery* other);
void QNetworkProxyQuery_swap(QNetworkProxyQuery* self, QNetworkProxyQuery* other);
bool QNetworkProxyQuery_operatorEqual(const QNetworkProxyQuery* self, QNetworkProxyQuery* other);
bool QNetworkProxyQuery_operatorNotEqual(const QNetworkProxyQuery* self, QNetworkProxyQuery* other);
int QNetworkProxyQuery_queryType(const QNetworkProxyQuery* self);
void QNetworkProxyQuery_setQueryType(QNetworkProxyQuery* self, int type);
int QNetworkProxyQuery_peerPort(const QNetworkProxyQuery* self);
void QNetworkProxyQuery_setPeerPort(QNetworkProxyQuery* self, int port);
struct miqt_string QNetworkProxyQuery_peerHostName(const QNetworkProxyQuery* self);
void QNetworkProxyQuery_setPeerHostName(QNetworkProxyQuery* self, struct miqt_string hostname);
int QNetworkProxyQuery_localPort(const QNetworkProxyQuery* self);
void QNetworkProxyQuery_setLocalPort(QNetworkProxyQuery* self, int port);
struct miqt_string QNetworkProxyQuery_protocolTag(const QNetworkProxyQuery* self);
void QNetworkProxyQuery_setProtocolTag(QNetworkProxyQuery* self, struct miqt_string protocolTag);
QUrl* QNetworkProxyQuery_url(const QNetworkProxyQuery* self);
void QNetworkProxyQuery_setUrl(QNetworkProxyQuery* self, QUrl* url);
const QMetaObject* QNetworkProxyQuery_staticMetaObject();
QNetworkProxy* QNetworkProxy_new();
QNetworkProxy* QNetworkProxy_new2(int type);
QNetworkProxy* QNetworkProxy_new3(QNetworkProxy* other);
QNetworkProxy* QNetworkProxy_new4(int type, struct miqt_string hostName);
QNetworkProxy* QNetworkProxy_new5(int type, struct miqt_string hostName, uint16_t port);
QNetworkProxy* QNetworkProxy_new6(int type, struct miqt_string hostName, uint16_t port, struct miqt_string user);
QNetworkProxy* QNetworkProxy_new7(int type, struct miqt_string hostName, uint16_t port, struct miqt_string user, struct miqt_string password);
void QNetworkProxy_operatorAssign(QNetworkProxy* self, QNetworkProxy* other);
void QNetworkProxy_swap(QNetworkProxy* self, QNetworkProxy* other);
bool QNetworkProxy_operatorEqual(const QNetworkProxy* self, QNetworkProxy* other);
bool QNetworkProxy_operatorNotEqual(const QNetworkProxy* self, QNetworkProxy* other);
void QNetworkProxy_setType(QNetworkProxy* self, int type);
int QNetworkProxy_type(const QNetworkProxy* self);
void QNetworkProxy_setCapabilities(QNetworkProxy* self, int capab);
int QNetworkProxy_capabilities(const QNetworkProxy* self);
bool QNetworkProxy_isCachingProxy(const QNetworkProxy* self);
bool QNetworkProxy_isTransparentProxy(const QNetworkProxy* self);
void QNetworkProxy_setUser(QNetworkProxy* self, struct miqt_string userName);
struct miqt_string QNetworkProxy_user(const QNetworkProxy* self);
void QNetworkProxy_setPassword(QNetworkProxy* self, struct miqt_string password);
struct miqt_string QNetworkProxy_password(const QNetworkProxy* self);
void QNetworkProxy_setHostName(QNetworkProxy* self, struct miqt_string hostName);
struct miqt_string QNetworkProxy_hostName(const QNetworkProxy* self);
void QNetworkProxy_setPort(QNetworkProxy* self, uint16_t port);
uint16_t QNetworkProxy_port(const QNetworkProxy* self);
void QNetworkProxy_setApplicationProxy(QNetworkProxy* proxy);
QNetworkProxy* QNetworkProxy_applicationProxy();
QVariant* QNetworkProxy_header(const QNetworkProxy* self, int header);
void QNetworkProxy_setHeader(QNetworkProxy* self, int header, QVariant* value);
bool QNetworkProxy_hasRawHeader(const QNetworkProxy* self, struct miqt_string headerName);
struct miqt_array /* of struct miqt_string */  QNetworkProxy_rawHeaderList(const QNetworkProxy* self);
struct miqt_string QNetworkProxy_rawHeader(const QNetworkProxy* self, struct miqt_string headerName);
void QNetworkProxy_setRawHeader(QNetworkProxy* self, struct miqt_string headerName, struct miqt_string value);
typedef struct VirtualQNetworkProxyFactory VirtualQNetworkProxyFactory;
typedef struct QNetworkProxyFactory_VTable{
	void (*destructor)(VirtualQNetworkProxyFactory* self);
	struct miqt_array /* of QNetworkProxy* */  (*queryProxy)(VirtualQNetworkProxyFactory* self, QNetworkProxyQuery* query);
}QNetworkProxyFactory_VTable;
const QNetworkProxyFactory_VTable* QNetworkProxyFactory_vtbl(const VirtualQNetworkProxyFactory* self);
void* QNetworkProxyFactory_vdata(const VirtualQNetworkProxyFactory* self);
VirtualQNetworkProxyFactory* QNetworkProxyFactory_new(const QNetworkProxyFactory_VTable* vtbl, void* vdata);
struct miqt_array /* of QNetworkProxy* */  QNetworkProxyFactory_queryProxy(QNetworkProxyFactory* self, QNetworkProxyQuery* query);
bool QNetworkProxyFactory_usesSystemConfiguration();
void QNetworkProxyFactory_setUseSystemConfiguration(bool enable);
void QNetworkProxyFactory_setApplicationProxyFactory(QNetworkProxyFactory* factory);
struct miqt_array /* of QNetworkProxy* */  QNetworkProxyFactory_proxyForQuery(QNetworkProxyQuery* query);
struct miqt_array /* of QNetworkProxy* */  QNetworkProxyFactory_systemProxyForQuery();
void QNetworkProxyFactory_operatorAssign(QNetworkProxyFactory* self, QNetworkProxyFactory* param1);
struct miqt_array /* of QNetworkProxy* */  QNetworkProxyFactory_systemProxyForQuery1(QNetworkProxyQuery* query);