seaqt/QtNetwork/gen_qnetworkproxy.nim

import ./Qt6Network_libs

{.push raises: [].}

from system/ansi_c import c_free, c_malloc

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)


type QNetworkProxyQueryQueryTypeEnum* = distinct cint
template TcpSocket*(_: type QNetworkProxyQueryQueryTypeEnum): untyped = 0
template UdpSocket*(_: type QNetworkProxyQueryQueryTypeEnum): untyped = 1
template SctpSocket*(_: type QNetworkProxyQueryQueryTypeEnum): untyped = 2
template TcpServer*(_: type QNetworkProxyQueryQueryTypeEnum): untyped = 100
template UrlRequest*(_: type QNetworkProxyQueryQueryTypeEnum): untyped = 101
template SctpServer*(_: type QNetworkProxyQueryQueryTypeEnum): untyped = 102


type QNetworkProxyProxyTypeEnum* = distinct cint
template DefaultProxy*(_: type QNetworkProxyProxyTypeEnum): untyped = 0
template Socks5Proxy*(_: type QNetworkProxyProxyTypeEnum): untyped = 1
template NoProxy*(_: type QNetworkProxyProxyTypeEnum): untyped = 2
template HttpProxy*(_: type QNetworkProxyProxyTypeEnum): untyped = 3
template HttpCachingProxy*(_: type QNetworkProxyProxyTypeEnum): untyped = 4
template FtpCachingProxy*(_: type QNetworkProxyProxyTypeEnum): untyped = 5


type QNetworkProxyCapabilityEnum* = distinct cint
template TunnelingCapability*(_: type QNetworkProxyCapabilityEnum): untyped = 1
template ListeningCapability*(_: type QNetworkProxyCapabilityEnum): untyped = 2
template UdpTunnelingCapability*(_: type QNetworkProxyCapabilityEnum): untyped = 4
template CachingCapability*(_: type QNetworkProxyCapabilityEnum): untyped = 8
template HostNameLookupCapability*(_: type QNetworkProxyCapabilityEnum): untyped = 16
template SctpTunnelingCapability*(_: type QNetworkProxyCapabilityEnum): untyped = 32
template SctpListeningCapability*(_: type QNetworkProxyCapabilityEnum): untyped = 64


import ./gen_qnetworkproxy_types
export gen_qnetworkproxy_types

import
  ../QtCore/gen_qobjectdefs_types,
  ../QtCore/gen_qurl_types,
  ../QtCore/gen_qvariant_types
export
  gen_qobjectdefs_types,
  gen_qurl_types,
  gen_qvariant_types

type cQNetworkProxyQuery*{.exportc: "QNetworkProxyQuery", incompleteStruct.} = object
type cQNetworkProxy*{.exportc: "QNetworkProxy", incompleteStruct.} = object
type cQNetworkProxyFactory*{.exportc: "QNetworkProxyFactory", incompleteStruct.} = object

proc fcQNetworkProxyQuery_operatorAssign(self: pointer, other: pointer): void {.importc: "QNetworkProxyQuery_operatorAssign".}
proc fcQNetworkProxyQuery_swap(self: pointer, other: pointer): void {.importc: "QNetworkProxyQuery_swap".}
proc fcQNetworkProxyQuery_operatorEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxyQuery_operatorEqual".}
proc fcQNetworkProxyQuery_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxyQuery_operatorNotEqual".}
proc fcQNetworkProxyQuery_queryType(self: pointer): cint {.importc: "QNetworkProxyQuery_queryType".}
proc fcQNetworkProxyQuery_setQueryType(self: pointer, typeVal: cint): void {.importc: "QNetworkProxyQuery_setQueryType".}
proc fcQNetworkProxyQuery_peerPort(self: pointer): cint {.importc: "QNetworkProxyQuery_peerPort".}
proc fcQNetworkProxyQuery_setPeerPort(self: pointer, port: cint): void {.importc: "QNetworkProxyQuery_setPeerPort".}
proc fcQNetworkProxyQuery_peerHostName(self: pointer): struct_miqt_string {.importc: "QNetworkProxyQuery_peerHostName".}
proc fcQNetworkProxyQuery_setPeerHostName(self: pointer, hostname: struct_miqt_string): void {.importc: "QNetworkProxyQuery_setPeerHostName".}
proc fcQNetworkProxyQuery_localPort(self: pointer): cint {.importc: "QNetworkProxyQuery_localPort".}
proc fcQNetworkProxyQuery_setLocalPort(self: pointer, port: cint): void {.importc: "QNetworkProxyQuery_setLocalPort".}
proc fcQNetworkProxyQuery_protocolTag(self: pointer): struct_miqt_string {.importc: "QNetworkProxyQuery_protocolTag".}
proc fcQNetworkProxyQuery_setProtocolTag(self: pointer, protocolTag: struct_miqt_string): void {.importc: "QNetworkProxyQuery_setProtocolTag".}
proc fcQNetworkProxyQuery_url(self: pointer): pointer {.importc: "QNetworkProxyQuery_url".}
proc fcQNetworkProxyQuery_setUrl(self: pointer, url: pointer): void {.importc: "QNetworkProxyQuery_setUrl".}
proc fcQNetworkProxyQuery_new(): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new".}
proc fcQNetworkProxyQuery_new2(requestUrl: pointer): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new2".}
proc fcQNetworkProxyQuery_new3(hostname: struct_miqt_string, port: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new3".}
proc fcQNetworkProxyQuery_new4(bindPort: cushort): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new4".}
proc fcQNetworkProxyQuery_new5(other: pointer): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new5".}
proc fcQNetworkProxyQuery_new6(requestUrl: pointer, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new6".}
proc fcQNetworkProxyQuery_new7(hostname: struct_miqt_string, port: cint, protocolTag: struct_miqt_string): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new7".}
proc fcQNetworkProxyQuery_new8(hostname: struct_miqt_string, port: cint, protocolTag: struct_miqt_string, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new8".}
proc fcQNetworkProxyQuery_new9(bindPort: cushort, protocolTag: struct_miqt_string): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new9".}
proc fcQNetworkProxyQuery_new10(bindPort: cushort, protocolTag: struct_miqt_string, queryType: cint): ptr cQNetworkProxyQuery {.importc: "QNetworkProxyQuery_new10".}
proc fcQNetworkProxyQuery_staticMetaObject(): pointer {.importc: "QNetworkProxyQuery_staticMetaObject".}
proc fcQNetworkProxy_operatorAssign(self: pointer, other: pointer): void {.importc: "QNetworkProxy_operatorAssign".}
proc fcQNetworkProxy_swap(self: pointer, other: pointer): void {.importc: "QNetworkProxy_swap".}
proc fcQNetworkProxy_operatorEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxy_operatorEqual".}
proc fcQNetworkProxy_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QNetworkProxy_operatorNotEqual".}
proc fcQNetworkProxy_setType(self: pointer, typeVal: cint): void {.importc: "QNetworkProxy_setType".}
proc fcQNetworkProxy_typeX(self: pointer): cint {.importc: "QNetworkProxy_type".}
proc fcQNetworkProxy_setCapabilities(self: pointer, capab: cint): void {.importc: "QNetworkProxy_setCapabilities".}
proc fcQNetworkProxy_capabilities(self: pointer): cint {.importc: "QNetworkProxy_capabilities".}
proc fcQNetworkProxy_isCachingProxy(self: pointer): bool {.importc: "QNetworkProxy_isCachingProxy".}
proc fcQNetworkProxy_isTransparentProxy(self: pointer): bool {.importc: "QNetworkProxy_isTransparentProxy".}
proc fcQNetworkProxy_setUser(self: pointer, userName: struct_miqt_string): void {.importc: "QNetworkProxy_setUser".}
proc fcQNetworkProxy_user(self: pointer): struct_miqt_string {.importc: "QNetworkProxy_user".}
proc fcQNetworkProxy_setPassword(self: pointer, password: struct_miqt_string): void {.importc: "QNetworkProxy_setPassword".}
proc fcQNetworkProxy_password(self: pointer): struct_miqt_string {.importc: "QNetworkProxy_password".}
proc fcQNetworkProxy_setHostName(self: pointer, hostName: struct_miqt_string): void {.importc: "QNetworkProxy_setHostName".}
proc fcQNetworkProxy_hostName(self: pointer): struct_miqt_string {.importc: "QNetworkProxy_hostName".}
proc fcQNetworkProxy_setPort(self: pointer, port: cushort): void {.importc: "QNetworkProxy_setPort".}
proc fcQNetworkProxy_port(self: pointer): cushort {.importc: "QNetworkProxy_port".}
proc fcQNetworkProxy_setApplicationProxy(proxy: pointer): void {.importc: "QNetworkProxy_setApplicationProxy".}
proc fcQNetworkProxy_applicationProxy(): pointer {.importc: "QNetworkProxy_applicationProxy".}
proc fcQNetworkProxy_header(self: pointer, header: cint): pointer {.importc: "QNetworkProxy_header".}
proc fcQNetworkProxy_setHeader(self: pointer, header: cint, value: pointer): void {.importc: "QNetworkProxy_setHeader".}
proc fcQNetworkProxy_hasRawHeader(self: pointer, headerName: struct_miqt_string): bool {.importc: "QNetworkProxy_hasRawHeader".}
proc fcQNetworkProxy_rawHeaderList(self: pointer): struct_miqt_array {.importc: "QNetworkProxy_rawHeaderList".}
proc fcQNetworkProxy_rawHeader(self: pointer, headerName: struct_miqt_string): struct_miqt_string {.importc: "QNetworkProxy_rawHeader".}
proc fcQNetworkProxy_setRawHeader(self: pointer, headerName: struct_miqt_string, value: struct_miqt_string): void {.importc: "QNetworkProxy_setRawHeader".}
proc fcQNetworkProxy_new(): ptr cQNetworkProxy {.importc: "QNetworkProxy_new".}
proc fcQNetworkProxy_new2(typeVal: cint): ptr cQNetworkProxy {.importc: "QNetworkProxy_new2".}
proc fcQNetworkProxy_new3(other: pointer): ptr cQNetworkProxy {.importc: "QNetworkProxy_new3".}
proc fcQNetworkProxy_new4(typeVal: cint, hostName: struct_miqt_string): ptr cQNetworkProxy {.importc: "QNetworkProxy_new4".}
proc fcQNetworkProxy_new5(typeVal: cint, hostName: struct_miqt_string, port: cushort): ptr cQNetworkProxy {.importc: "QNetworkProxy_new5".}
proc fcQNetworkProxy_new6(typeVal: cint, hostName: struct_miqt_string, port: cushort, user: struct_miqt_string): ptr cQNetworkProxy {.importc: "QNetworkProxy_new6".}
proc fcQNetworkProxy_new7(typeVal: cint, hostName: struct_miqt_string, port: cushort, user: struct_miqt_string, password: struct_miqt_string): ptr cQNetworkProxy {.importc: "QNetworkProxy_new7".}
proc fcQNetworkProxyFactory_queryProxy(self: pointer, query: pointer): struct_miqt_array {.importc: "QNetworkProxyFactory_queryProxy".}
proc fcQNetworkProxyFactory_usesSystemConfiguration(): bool {.importc: "QNetworkProxyFactory_usesSystemConfiguration".}
proc fcQNetworkProxyFactory_setUseSystemConfiguration(enable: bool): void {.importc: "QNetworkProxyFactory_setUseSystemConfiguration".}
proc fcQNetworkProxyFactory_setApplicationProxyFactory(factory: pointer): void {.importc: "QNetworkProxyFactory_setApplicationProxyFactory".}
proc fcQNetworkProxyFactory_proxyForQuery(query: pointer): struct_miqt_array {.importc: "QNetworkProxyFactory_proxyForQuery".}
proc fcQNetworkProxyFactory_systemProxyForQuery(): struct_miqt_array {.importc: "QNetworkProxyFactory_systemProxyForQuery".}
proc fcQNetworkProxyFactory_operatorAssign(self: pointer, param1: pointer): void {.importc: "QNetworkProxyFactory_operatorAssign".}
proc fcQNetworkProxyFactory_systemProxyForQuery1(query: pointer): struct_miqt_array {.importc: "QNetworkProxyFactory_systemProxyForQuery1".}
proc fcQNetworkProxyFactory_vtbl(self: pointer): pointer {.importc: "QNetworkProxyFactory_vtbl".}
proc fcQNetworkProxyFactory_vdata(self: pointer): pointer {.importc: "QNetworkProxyFactory_vdata".}
type cQNetworkProxyFactoryVTable {.pure.} = object
  destructor*: proc(self: pointer) {.cdecl, raises:[], gcsafe.}
  queryProxy*: proc(self: pointer, query: pointer): struct_miqt_array {.cdecl, raises: [], gcsafe.}
proc fcQNetworkProxyFactory_new(vtbl, vdata: pointer): ptr cQNetworkProxyFactory {.importc: "QNetworkProxyFactory_new".}

proc operatorAssign*(self: gen_qnetworkproxy_types.QNetworkProxyQuery, other: gen_qnetworkproxy_types.QNetworkProxyQuery): void =
  fcQNetworkProxyQuery_operatorAssign(self.h, other.h)

proc swap*(self: gen_qnetworkproxy_types.QNetworkProxyQuery, other: gen_qnetworkproxy_types.QNetworkProxyQuery): void =
  fcQNetworkProxyQuery_swap(self.h, other.h)
